# soulcraft

./: .gitignore  LICENSE  Makefile  README.md  README_zh.md  demo.py  pyproject.toml
compiler/: __init__.py  compile.py  openclaw.py  team_compile.py
docs/: pipeline_prompt_template.md  roadmap_team_templates.md
handoff/: 00_role_and_rules.md  10_decisions_frozen.md  20_contracts.md  30_now.md  latest-handoff.json  latest-handoff.md
handoff/plans/20260315-175156-phase1-fixes/: findings.md  progress.md  task_plan.md
l0_adapter/: README.md  __init__.py  __main__.py  cli.py  common.py
l0_adapter/parsers/: __init__.py  attributed.py  dialogue.py  microburst.py  monologue.py
schemas/: soul_schema.json  team_schema.json
soulcraft-ui/: .gitignore  package-lock.json  package.json
souls/cao-cao/: soul.md  soul.yaml
souls/charlie-munger/: soul.yaml
souls/edward-tufte/: soul.yaml
souls/guo-jia/: soul.md  soul.yaml
souls/jeff-bezos/: soul.yaml
souls/john-carmack/: soul.yaml
souls/linus-torvalds/: soul.md  soul.yaml
souls/marty-cagan/: soul.yaml
souls/nassim-taleb/: soul.yaml
souls/sima-yi/: soul.md  soul.yaml
souls/steve-jobs/: soul.yaml
souls/warren-buffett/: soul.md  soul.yaml
souls/xun-yu/: soul.md  soul.yaml
souls/zhang-liao/: soul.md  soul.yaml
souls/zhuge-liang/: soul.md  soul.yaml
teams/code-review/: team.yaml
teams/dream-company/: team.yaml
teams/three-kingdoms/: team.yaml
tests/: conftest.py  test_compiler.py  test_dream_company.py  test_holdout.py  test_openclaw.py  test_schema.py  test_team.py  test_three_kingdoms.py
(+24 files in other folders)
