[project]
name = "soulcraft"
version = "0.1.0"
description = "Data-driven persona extraction pipeline — forge AI souls from humanity's greatest minds."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
